--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -1,8 +1,3 @@
-.wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 .add-task {
 	margin-top: 10px;
 }
@@ -11,3 +6,6 @@
 	flex-direction: column;
 	align-items: center;
 }
+// mat-form-field {
+//     width: 160px;
+// }
