--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar class="toolbar" color="primary">
 	<span>Task Tracker</span>
 	<span class="spacer"></span>
+	<a mat-raised-button [routerLink] = "'/'">Task List</a>
 	<a mat-raised-button [routerLink] = "'/add'">Add Task</a>
 </mat-toolbar>
 
