--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -1,1 +1,21 @@
-<p>tasks-list works!</p>
+<ng-container>
+	<mat-grid-list cols="3" rowHeight="2:1">
+		<mat-card *ngFor="let task of tasks$ | async">
+			<mat-card-header>
+				<mat-card-title>{{ task.title }}</mat-card-title>
+				<mat-card-subtitle>{{ task.name }}</mat-card-subtitle>
+			</mat-card-header>
+			<mat-card-content>
+				<p>
+					DeadLine - {{ task.deadline | date:'fullDate'}}
+				</p>
+				<p>Priority - {{ task.priority }}</p>
+				<p>Status - {{ task.status }}</p>
+			</mat-card-content>
+			<mat-card-actions>
+				<button mat-raised-button color="primary">Finish</button>
+				<button [routerLink] = "'/edit/' + task.task_id" mat-raised-button color="accent">Edit</button>
+			</mat-card-actions>
+		</mat-card>
+	</mat-grid-list>
+</ng-container>
