--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,1 +1,4 @@
-<p>task works!</p>
+<!-- <ng-container *ngFor="let task of tasks$ | async"> -->
+	<!-- <h1>{{task.title}}</h1> -->
+	<h2>hello</h2>
+<!-- </ng-container> -->
