--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -4,8 +4,12 @@
 .form {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: flex-start;
+	box-shadow: 1px 3px 10px rgba(0,0,0,.4);
+	border-radius: 4px;
+	padding: 15px 30px 15px 30px;
 }
-// mat-form-field {
-//     width: 160px;
-// }
+.edit-buttons-block {
+	display: flex;
+	gap: 10px;
+}
